<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >

    <item android:title="Color"
        >
        <menu>
            <item
                android:title="@string/title_red"
                android:id="@+id/title_red"
                android:icon="@drawable/red"
                ></item>
            <item
                android:title="@string/title_blue"
                android:id="@+id/title_blue"
                android:icon="@drawable/blue"
                ></item>
            <item
                android:title="@string/title_green"
                android:id="@+id/title_green"
                android:icon="@drawable/green"
                ></item>
            <item
                android:title="@string/title_purple"
                android:id="@+id/title_purple"
                android:icon="@drawable/purple"
                ></item>
            <item
                android:title="@string/title_black"
                android:id="@+id/title_black"
                android:icon="@drawable/black"
                ></item>
        </menu>

    </item>

</menu>